--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hello from MaxMoto1702</title>
   </head>
   <body>
-    <h1>Hello from MaxMoto1702</h1>
+    <h1>Привет, я любимый :)</h1>
   </body>
 </html>
